Tue Jun  8 06:04:49 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (parse_mode_enc): set set_by_bom bit.  [ruby-core:30641]

Sun Jun  6 23:35:12 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* gc.c (heaps_slot, assign_heap_slot, gc_sweep): skip sweep if
	  heap_slot's status is pre-free phase.  [ruby-dev:41543]

Sun Jun  6 22:37:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_buf_cat_escaped_char): get rid of buffer
	  overflow on platforms int is bigger than 32bit, and warnings.

Sun Jun  6 10:44:34 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_product): need to set the length in order to get
	  the entries marked.  [ruby-dev:41540]

Sun Jun  6 08:26:01 2010  Tanaka Akira  <akr@fsij.org>

	* vm.c (Init_BareVM): call Init_native_thread here.

	* thread.c (Init_Thread): don't call Init_native_thread.

	* thread_pthread.c (Init_native_thread): exported.

	* thread_win32.c (Init_native_thread): ditto.

	[ruby-dev:41536]

Sun Jun  6 08:21:17 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* NEWS: Enumerable#join has been reverted.  [ruby-core:30604]

Sun Jun  6 02:56:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_enc_unicode_p): check the encoding is Unicode
	  or not by the name; not function's pointer. [ruby-dev:41479]

Sat Jun  5 23:15:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_expr_str): ASCII incompatible strings
	  must always escape or converted.

	* re.c (rb_reg_expr_str): use rb_str_buf_cat_escaped_char
	  when resenc is given: for Regexp#inspect or error message.

	* re.c (rb_reg_desc): add 'n' for ENCODING_NONE.

Sat Jun  5 23:15:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (sym_inspect): Escape when the symbol is not
	  resulted encoding and not ascii_only. It had escaped
	  ascii-incompatible string, but it is wrong.

Sat Jun  5 23:15:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_buf_cat_escaped_char): defined.
	  Splited from rb_str_inspect.
